Cleaned-up gotcha about ActiveRecord naming collisions to README.

--- a/README.rdoc
+++ b/README.rdoc
@@ -44,7 +44,7 @@ To use in a Rails project, add this to config/environment.rb:
 *GOTCHA* In projects with ActiveRecord enabled (i.e., Rails projects)
 SOAP will identify returned data as AR objects if there's a
 naming collision. For example, if you're running
-*@ym.creative.get(token,123)*
+	@ym.creative.get(token,123)
 and you have an AR objects for a +creatives+ table in the db, the
 SOAP parser will interpret the returned SOAP object as
 an AR Creative object, resulting in bizarre errors. Uniquely
