--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@
 	"unknown element: {http://schemas.xmlsoap.org/wsdl/}definitions"
 * throwing warning when running in autotest, but not spec?: monkeypatch net/http?
 	"warning: peer certificate won't be verified in this SSL session"
+* DONE Using :env => "test" actually hits test environment
 * DONE add session start/end
 * DONE add session block
 * DONE end session even after exception
@@ -9,11 +10,11 @@
 * DONE add pagination
 * add error-handling (timeouts, too many connections?)
 * add reporting
+** how to handle subtotal/total rows?
+** cast columns to ruby types based on column[data_type]?
 ** DONE pull_report(xml) method in Client
 ** DONE Yieldmanager::Report DTO
 *** DONE headers array (for proper column ordering)
 *** DONE data as array of arrays
 *** DONE data as array of hashes (string or symbol keys)
 ** DONE hpricot for parsing (http://github.com/hpricot/hpricot/)
-** how to handle subtotal/total rows?
-** cast columns to ruby types based on column[data_type]?
