--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@
 	"unknown element: {http://schemas.xmlsoap.org/wsdl/}definitions"
 * throwing warning when running in autotest, but not spec?: monkeypatch net/http?
 	"warning: peer certificate won't be verified in this SSL session"
+* DONE (chris) Monkey-patch 1.8.7 to handle targetnamespace bug
 * DONE Using :env => "test" actually hits test environment
 * DONE add session start/end
 * DONE add session block
