Added option to use strings as keys for Yieldmanager::Client.new.

--- a/README.rdoc
+++ b/README.rdoc
@@ -41,6 +41,8 @@ To access the test environment, use this:
 		:env => "test"
 	)
 
+The keys can also be passed as string: 'user', 'pass', 'api_version' and 'env'.
+
 *NOTE* Changing the environment after creation has no effect!
 
 === Finding available services
